--- a/zhuge571hw.html
+++ b/zhuge571hw.html
@@ -19,7 +19,7 @@ th, td {
     <td>Link to Homework #2</td>
   </tr>
   <tr>
-    <td><a href="https://csci571.com/hw/hw2/ScrambleThisName.html">Link to Homework #3</a></td>
+    <td><a href="index.html">Link to Homework #3</a></td>
     <td><a href="https://csci571.com/hw/hw2/ScrambleThisName.html">Link to Homework #4</a></td>
   </tr>
   <tr>
