--- a/hw3/hw3asdfg.html
+++ b/hw3/hw3asdfg.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Home</title>
-        <link href = "style.css" rel = "stylesheet" type = "text/css">
+        <link href = "styleasdfg.css" rel = "stylesheet" type = "text/css">
     </head>
     
     <body>
