--- a/zhuge571johui.html
+++ b/zhuge571johui.html
@@ -24,7 +24,7 @@ th, td {
   </tr>
   <tr>
     <td>Link to Homework #5</td>
-    <td><a href="https://csci571.com/hw/hw2/ScrambleThisName.html">Link to Homework #6</a></td>
+    <td><a href="http://zhuge.us-east-1.elasticbeanstalk.com/">Link to Homework #6</a></td>
   </tr>
   <tr>
     <td>Link to Homework #7</td>
