--- a/zhuge571johui.html
+++ b/zhuge571johui.html
@@ -23,7 +23,7 @@ th, td {
     <td><a href="https://csci571.com/hw/hw2/ScrambleThisName.html">Link to Homework #4</a></td>
   </tr>
   <tr>
-    <td><a href="http://zhuge.us-east-1.elasticbeanstalk.com/api/search">Link to Homework #6 API JSON</a></td>
+    <td><a href="http://zhuge.us-east-1.elasticbeanstalk.com/api/search/?keyword=aapl">Link to Homework #6 API JSON</a></td>
     <td><a href="http://zhuge.us-east-1.elasticbeanstalk.com/">Link to Homework #6</a></td>
   </tr>
   <tr>
