--- a/zhuge571johui.html
+++ b/zhuge571johui.html
@@ -27,8 +27,8 @@ th, td {
     <td><a href="http://zhuge.us-east-1.elasticbeanstalk.com/">Link to Homework #6</a></td>
   </tr>
   <tr>
-    <td>Link to Homework #7</td>
-    <td><a href="https://csci571.com/hw/hw2/ScrambleThisName.html">Link to Homework #8</a></td>
+    <td><a href="http://zhugexiu.us-east-1.elasticbeanstalk.com/details/aapl">Link to Homework #8 API JSON</td>
+    <td><a href="http://zhugexiuhw8.us-east-1.elasticbeanstalk.com">Link to Homework #8</a></td>
   </tr>
   <tr>
     <td>Link to Homework #9</td>
