--- a/zhuge571johui.html
+++ b/zhuge571johui.html
@@ -31,8 +31,8 @@ th, td {
     <td><a href="http://zhugexiuhw8.us-east-1.elasticbeanstalk.com">Link to Homework #8</a></td>
   </tr>
   <tr>
+       <td><a href="http://zhugexiu.us-east-1.elasticbeanstalk.com/hw9news/aapl">Link to Homework #9 API JSON</td>
     <td>Link to Homework #9</td>
-    <td>Link to Homework #10</td>
   </tr>
   </tbody></table>
 
