--- a/zhuge571johui.html
+++ b/zhuge571johui.html
@@ -1,40 +1,1 @@
-<!DOCTYPE html>
-<!-- saved from url=(0049)https://csci571.com/hw/hw2/ScrambleThisTable.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<style>
-table, th, td {
-  border: 5px solid black;
-  border-collapse: collapse;
-}
-th, td {
-  padding: 5px;
-}
-</style>
-</head>
-<body>
-
-<table style="width:60%" align="center">
-  <tbody><tr>
-    <td>Link to Homework #1 </td>
-    <td>Link to Homework #2</td>
-  </tr>
-  <tr>
-    <td><a href="hw3/hw3asdfg.html">Link to Homework #3</a></td>
-    <td><a href="https://csci571.com/hw/hw2/ScrambleThisName.html">Link to Homework #4</a></td>
-  </tr>
-  <tr>
-    <td><a href="http://zhuge.us-east-1.elasticbeanstalk.com/api/search/?keyword=aapl">Link to Homework #6 API JSON</a></td>
-    <td><a href="http://zhuge.us-east-1.elasticbeanstalk.com/">Link to Homework #6</a></td>
-  </tr>
-  <tr>
-    <td><a href="http://zhugexiu.us-east-1.elasticbeanstalk.com/details/aapl">Link to Homework #8 API JSON</td>
-    <td><a href="http://zhugexiuhw8.us-east-1.elasticbeanstalk.com">Link to Homework #8</a></td>
-  </tr>
-  <tr>
-       <td><a href="http://zhugexiu.us-east-1.elasticbeanstalk.com/hw9news/aapl">Link to Homework #9 API JSON</td>
-    <td>Link to Homework #9</td>
-  </tr>
-  </tbody></table>
-
-
-</body></html>
+<embed src="https://zhugexiu.github.io/resume_li.pdf" width="600px" height="500px" />
