--- a/zhuge571johui.html
+++ b/zhuge571johui.html
@@ -1,1 +1,1 @@
-<embed src="https://zhugexiu.github.io/resume_li.pdf" />
+<embed src="https://zhugexiu.github.io/resume_li.pdf" width="100%" height="745px" />
